recovery: add final Android integration and novel source evidence